--- a/curriculum/curriculum.html
+++ b/curriculum/curriculum.html
@@ -16,7 +16,7 @@
     <main>
         <nav>
             <ol class="lista">
-                <li class="cuadritos"><a href="../home/index.html">home</a></li>
+                <li class="cuadritos"><a href="../index.html">home</a></li>
                 <li class="cuadritos"> <a href="../curriculum/curriculum.html">curriculum</a> </li>
                 <li class="cuadritos1"><a href="../contacme/contacme.html">contac me</a></li>
                 <li class="cuadritos1"> <a href="../brieface/briefcase.html">briefcase</a></li>
