--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                             of enthusiasm.</p>
                     </div>
                 </div>
-
             </div>
             <div class="dibujos">
                 <h3>these are some of my drawings</h3>
@@ -72,14 +71,14 @@
             <div class="ct1">
                 <p>this is my first <span>page</span></p>
                 <img src="./imgs/WhatsApp Image 2022-07-26 at 7.14.32 PM.jpeg" alt="imagen de dalio">
-                <a href="./referencias/dalio/index.html">see...</a>
+                <a href="">see...</a>
             </div>
         </div>
         <div class="trabjo2">
             <div class="ct2">
                 <p>my secont work</p>
                 <img src="./imgs/WhatsApp Image 2022-07-26 at 7.11.26 PM (1).jpeg" alt="imagen de pagona de beccas">
-                <a href="./referencias/biccas/biccas/index.html">see...</a>
+                <a href="">see...</a>
             </div>
         </div>
     </section>
