cambios de mejora
nuevos cambiios de links & funcionalidad

--- a/brieface/briefcase.html
+++ b/brieface/briefcase.html
@@ -48,8 +48,7 @@
           in html my works can be noticed a good improvement, because it is
           what I have practiced the most as a designer
         </p>
-        <a href="../referencias/dalio/index.html" target="_blank">
-          <img src="../imgs/WhatsApp Image 2022-07-26 at 7.14.32 PM.jpeg " alt="dalio" /></a>
+          <img src="../imgs/WhatsApp Image 2022-07-26 at 7.14.32 PM.jpeg " alt="dalio">
         <p>
           To be more specific, dalio was a very good job for me, because it
           was the first web page I did and to be the first I am very pleased
@@ -60,22 +59,22 @@
         <h2>biccas</h2>
         <p>big cass was a project with more difficulty because there were new things but it came out perfect, you can
           see progress with experience</p>
-        <a href="../referencias/biccas/biccas/index.html"><img src="../imgs/WhatsApp Image 2022-07-26 at 7.11.26 PM (1).jpeg" alt=""></a>
+        <img src="../imgs/WhatsApp Image 2022-07-26 at 7.11.26 PM (1).jpeg" alt="">
       </div>
     </div>
   </section>
   <section class="js">
     <div class="tareas">
       <div class="tarea4">
-        <a href="../referencias/JS/tarea 4 js/tarea4.html" target="_blank"><img src="../imgs/tarea4.jpeg" alt=""></a>
+        <img src="../imgs/tarea4.jpeg" alt="">
         <p>This work is that if you put a "hola" in different ways, I will answer the greeting</p>
       </div>
       <div class="tarea1">
         <p>In this job you have to enter your age and it will answer the stage of life in which you find yourself</p>
-        <a href="../referencias/JS/tarea9 js/tarea9.html" target="_blank"> <img src="../imgs/tarea1.jpeg" alt=""></a>
+          <img src="../imgs/tarea1.jpeg" alt="">
       </div>
       <div class="tarea11">
-        <a href="../referencias/JS/tarea11 js/tarea11.html" target="_blank"><img src="../imgs/tarea11.jpeg" alt="" ></a>
+          <img src="../imgs/tarea11.jpeg" alt="" >
         <p>this work is very interesting, you put a country of the world and it will answer you if it is global or not</p>
       </div>
     </div>
